Perform Sonarlint introspection